# autoengine-core

./: .gitignore  Cargo.toml  README.md  README_CN.md
auto-engine-cli/src/: cmd.rs  main.rs
auto-engine-cli/src/converter/: keymousego.rs  quickinput.rs
auto-engine-core/: Cargo.toml
auto-engine-core/src/: action.rs  context.rs  lib.rs  node.rs  notification.rs  pipeline.rs  runner.rs  workflow.rs
auto-engine-core/src/action/: screenshot.rs
auto-engine-core/src/event/: mod.rs  node.rs  workflow.rs
auto-engine-core/src/node/: image_match.rs
auto-engine-core/src/node/data_aggregator/: node.rs  runner.rs
auto-engine-core/src/node/http/: node.rs  runner.rs
auto-engine-core/src/node/image_match/: node.rs  runner.rs
auto-engine-core/src/node/keyboard/: node.rs  runner.rs
auto-engine-core/src/node/mouse_click/: node.rs  runner.rs
auto-engine-core/src/node/mouse_move/: node.rs  runner.rs
auto-engine-core/src/node/ocr/: node.rs  runner.rs
auto-engine-core/src/node/screen_capture/: node.rs  runner.rs
auto-engine-core/src/node/start/: node.rs  runner.rs
auto-engine-core/src/node/time_wait/: node.rs  runner.rs
auto-engine-core/src/node/wasm/: node.rs  runner.rs
auto-engine-core/src/notification/: emitter.rs  tauri.rs
auto-engine-core/src/plugin/: loader.rs
auto-engine-core/src/register/: bus.rs
auto-engine-core/src/runner/: image_recognition.rs  keyboard.rs  mouse.rs
auto-engine-core/src/schema/: node.rs  workflow.rs
auto-engine-core/src/types/: conditions.rs  field.rs  keyboard.rs  mod.rs  node.rs  typs.rs
auto-engine-core/src/utils/: mod.rs
auto-engine-core/src/workflow/: builder.rs  graph.rs  runner.rs
auto-engine-core/wit/: node.wit
auto-engine-macro/: Cargo.toml
auto-engine-macro/src/: lib.rs  node.rs
auto-engine-macro/src/node/: define.rs  metadata.rs
