[package]
version = "0.3.0"
name = "auto-engine-core"
edition = "2024"

[dependencies]
auto-engine-macro = { path = "../auto-engine-macro" }
serde_json = "1.0"
serde_yaml = "0.9.34"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
opencv = { version = "0", features = ["clang-runtime"] }
tauri = { version = "2.9.4", features = [] }
regex = "1.11.2"
futures = "0.3"
once_cell = "1.21.3"
evalexpr = "12.0.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
screenshots = "0.8.10"
enigo = { version = "0.6.1", features = ["tokio"] }
schemars = "1.1.0"
async-trait = "0.1.89"
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"
anyhow = "1.0.100"
convert_case = "0.10.0"
leptess = "0.14.0"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }

[features]
default = ["types", "context", "event", "pipeline", "runner", "utils"]
types = []
context = []
event = []
pipeline = []
runner = []
utils = []
tauri = []
wasm = ["types"]
