[package]
name = "auto-engine-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2", features = ["full"] }
serde_json = { workspace = true }
serde = { workspace = true }

[lib]
proc-macro = true
